@@ -2,7 +2,7 @@
 # license   : MIT; see accompanying LICENSE file
 
 crosstest = false
-test.arguments = config.cxx=$quote($recall($cxx.path) $cxx.mode, true)
+test.arguments = config.cxx=$quote($recall($cxx.path) $cxx.config.mode, true)
 
 .include ../../common.testscript
 
