@@ -657,7 +657,7 @@ EOE
   : process-path-ex
   :
   {
-    config_cxx = config.cxx=$quote($recall($cxx.path) $cxx.mode, true)
+    config_cxx = config.cxx=$quote($recall($cxx.path) $cxx.config.mode, true)
 
     mkdir build;
     cat <<EOI >=build/bootstrap.build;
